Created page with "{| class="sortable wikitable" ! style="width:4%;" |Ikona ! style="width:8%;" |Název ! style="width:10%;" |Téma ! style="width:56%;" |Popis ! style="width:8%;" |Autor ! style="width:10%;" |Kód ! style="width:2%;" |<!--Addon Manager--> ! style="width:2%;" |<!--Status-->"

--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -38,25 +38,23 @@
 <h2><span id="P.C5.99ehled"></span><span class="mw-headline" id="P&#345;ehled">P&#345;ehled</span></h2>
 <p>N&iacute;&#382;e uveden&aacute; tabulka je uspo&#345;&aacute;d&aacute;na podle t&eacute;mat, ale lze ji p&#345;eskupit kliknut&iacute;m na libovoln&eacute; z&aacute;hlav&iacute; sloupce.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="sortable wikitable">
 <tbody><tr>
-<th style="width:4%;">Icon
+<th style="width:4%;">Ikona
 </th>
-<th style="width:8%;">Name
+<th style="width:8%;">N&aacute;zev
 </th>
-<th style="width:10%;">Topic
+<th style="width:10%;">T&eacute;ma
 </th>
-<th style="width:56%;">Description
+<th style="width:56%;">Popis
 </th>
-<th style="width:8%;">Author
+<th style="width:8%;">Autor
 </th>
-<th style="width:10%;">Code
-</th>
-<th style="width:2%;">
+<th style="width:10%;">K&oacute;d
 </th>
 <th style="width:2%;">
-
+</th>
+<th style="width:2%;">
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></th></tr>
 <tr>
@@ -2286,7 +2284,7 @@
 
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr></tbody></table>
-</div>
+
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Translating_external_workbenches">Translating external workbenches</span></h2>
 </div>
@@ -2318,13 +2316,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119223003
+Cached time: 20260119223205
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.535 seconds
-Real time usage: 1.154 seconds
-Preprocessor visited node count: 624/1000000
+CPU time usage: 0.469 seconds
+Real time usage: 1.791 seconds
+Preprocessor visited node count: 623/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2334,17 +2332,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.571      1 -total
- 34.17%   12.153      1 Template:Userdocnavi/cs
- 16.80%    5.977      1 Template:Navigation_menu_2
- 15.91%    5.661      1 Template:TOCright
- 14.04%    4.994      2 Template:Docnav
- 11.73%    4.174      1 Template:KEY
- 10.59%    3.768      2 Template:FileName
- 10.20%    3.628      1 Template:Version
+100.00%   34.485      1 -total
+ 42.49%   14.652      1 Template:Userdocnavi/cs
+ 19.12%    6.595      2 Template:FileName
+ 15.60%    5.381      1 Template:Navigation_menu_2
+ 12.52%    4.316      2 Template:Docnav
+  8.69%    2.998      1 Template:KEY
+  7.36%    2.539      1 Template:TOCright
+  6.50%    2.242      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119223001 and revision id 1741401. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119223203 and revision id 1741403. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
