--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -55,16 +55,15 @@
 <th style="width:2%;">
 </th>
 <th style="width:2%;">
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></th></tr>
+</th></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=ArchTextures_workbench_icon.svg&amp;filetimestamp=20200209022628&amp;.html" class="mw-file-description"><img src="../File/ArchTextures_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/furti/FreeCAD-ArchTextures">ArchTextures</a>
 </td>
-<td>Architecture and construction
+<td>Architektura a stavebnictv&iacute;
 </td>
-<td>It allows you to add basic, non-photorealistic textures to architectural objects created with the <a href="../BIM_Workbench.html" title="BIM Workbench">BIM Workbench</a>.
+<td>Umo&#382;&#328;uje p&#345;id&aacute;vat z&aacute;kladn&iacute;, nefotorealistick&eacute; textury k architektonick&yacute;m objekt&#367;m vytvo&#345;en&yacute;m pomoc&iacute; <a href="../BIM_Workbench.html" title="BIM Workbench">pracovn&iacute; plochy BIM</a>.
 </td>
 <td>furti
 </td>
@@ -73,7 +72,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2316,13 +2314,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119223205
+Cached time: 20260119223329
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.469 seconds
-Real time usage: 1.791 seconds
-Preprocessor visited node count: 623/1000000
+CPU time usage: 0.456 seconds
+Real time usage: 1.447 seconds
+Preprocessor visited node count: 622/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2332,17 +2330,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.485      1 -total
- 42.49%   14.652      1 Template:Userdocnavi/cs
- 19.12%    6.595      2 Template:FileName
- 15.60%    5.381      1 Template:Navigation_menu_2
- 12.52%    4.316      2 Template:Docnav
-  8.69%    2.998      1 Template:KEY
-  7.36%    2.539      1 Template:TOCright
-  6.50%    2.242      1 Template:Version
+100.00%   32.564      1 -total
+ 43.74%   14.244      1 Template:Userdocnavi/cs
+ 20.44%    6.657      2 Template:Docnav
+ 12.17%    3.963      1 Template:Navigation_menu_2
+ 10.21%    3.325      2 Template:FileName
+  8.75%    2.848      1 Template:TOCright
+  8.19%    2.668      1 Template:KEY
+  4.29%    1.398      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119223203 and revision id 1741403. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119223327 and revision id 1741405. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
