--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -397,16 +397,15 @@
 </td>
 <td>
 
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=A2p_workbench.svg&amp;filetimestamp=20181002134339&amp;.html" class="mw-file-description"><img src="../File/A2p_workbench.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a href="../A2plus_Workbench.html" title="A2plus Workbench">A2plus</a>
 </td>
-<td>Assembly
+<td>Sestava
 </td>
-<td>It provides tools to create multi-part assemblies. It is a fork and extension of the older <a href="../Assembly2_Workbench.html" title="Assembly2 Workbench">Assembly2 Workbench</a>, but it is not compatible with it.
+<td>Poskytuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; v&iacute;ce&#269;l&aacute;nkov&yacute;ch sestav. Jedn&aacute; se o odvozeninu a roz&scaron;&iacute;&#345;en&iacute; star&scaron;&iacute; <a href="../Assembly2_Workbench.html" title="Assembly2 Workbench">pracovn&iacute; plochy Assembly2</a>, ale nen&iacute; s n&iacute;m kompatibiln&iacute;.
 </td>
 <td>kbwbe
 </td>
@@ -415,7 +414,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2312,13 +2310,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119223524
+Cached time: 20260119223757
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.362 seconds
-Real time usage: 0.518 seconds
-Preprocessor visited node count: 621/1000000
+CPU time usage: 0.369 seconds
+Real time usage: 1.560 seconds
+Preprocessor visited node count: 620/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2328,17 +2326,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.436      1 -total
- 36.07%    5.928      1 Template:Userdocnavi/cs
- 22.80%    3.748      2 Template:Docnav
- 14.84%    2.439      1 Template:Version
- 13.60%    2.235      1 Template:Navigation_menu_2
-  9.83%    1.615      2 Template:FileName
-  6.60%    1.084      1 Template:TOCright
-  6.30%    1.035      1 Template:KEY
+100.00%   54.297      1 -total
+ 49.33%   26.784      1 Template:Userdocnavi/cs
+ 20.11%   10.921      1 Template:KEY
+ 17.58%    9.547      1 Template:Navigation_menu_2
+  9.80%    5.322      2 Template:FileName
+  8.31%    4.510      1 Template:TOCright
+  6.09%    3.305      2 Template:Docnav
+  4.87%    2.645      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119223524 and revision id 1741407. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119223755 and revision id 1741409. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
