Created page with "|- | |[https://github.com/triplus/Autoload Autoload] |Přizpůsobení |Jedná se o malé rozšíření, které vám umožňuje vybrat pracovní plochy, které se mají načíst při spuštění programu FreeCAD. Lze ho použít v kombinaci s dalšími rozšířeními od stejného autora, jako jsou CommandPanel, PieMenu a ShortCuts. |triplus |https://github.com/triplus/Autoload |[[File:AddonManager.svg|24px]] |[[File:Edit_Cancel.svg|24px]]"

--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -471,16 +471,15 @@
 </td>
 <td>
 
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/triplus/Autoload">Autoload</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is a small extension that allows you to select the workbenches that should be loaded when you start FreeCAD. It can be used in combination with other extensions from the same author such as CommandPanel, PieMenu, and ShortCuts.
+<td>Jedn&aacute; se o mal&eacute; roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; v&aacute;m umo&#382;&#328;uje vybrat pracovn&iacute; plochy, kter&eacute; se maj&iacute; na&#269;&iacute;st p&#345;i spu&scaron;t&#283;n&iacute; programu FreeCAD. Lze ho pou&#382;&iacute;t v kombinaci s dal&scaron;&iacute;mi roz&scaron;&iacute;&#345;en&iacute;mi od stejn&eacute;ho autora, jako jsou CommandPanel, PieMenu a ShortCuts.
 </td>
 <td>triplus
 </td>
@@ -489,7 +488,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2310,13 +2308,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119223757
+Cached time: 20260119223911
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.369 seconds
-Real time usage: 1.560 seconds
-Preprocessor visited node count: 620/1000000
+CPU time usage: 0.387 seconds
+Real time usage: 0.856 seconds
+Preprocessor visited node count: 619/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2326,17 +2324,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.297      1 -total
- 49.33%   26.784      1 Template:Userdocnavi/cs
- 20.11%   10.921      1 Template:KEY
- 17.58%    9.547      1 Template:Navigation_menu_2
-  9.80%    5.322      2 Template:FileName
-  8.31%    4.510      1 Template:TOCright
-  6.09%    3.305      2 Template:Docnav
-  4.87%    2.645      1 Template:Version
+100.00%   17.182      1 -total
+ 38.69%    6.647      1 Template:Userdocnavi/cs
+ 15.95%    2.740      2 Template:Docnav
+ 14.33%    2.463      1 Template:Navigation_menu_2
+ 12.13%    2.085      1 Template:Version
+ 10.35%    1.778      1 Template:TOCright
+  9.90%    1.701      1 Template:KEY
+  8.07%    1.386      2 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119223755 and revision id 1741409. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119223910 and revision id 1741411. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
