--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -488,16 +488,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/triplus/CommandPanel">CommandPanel</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is an extension that provides a panel that can be used store tools from different workbenches.
+<td>Jedn&aacute; se o roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; poskytuje panel, kter&yacute; lze pou&#382;&iacute;t k ukl&aacute;d&aacute;n&iacute; n&aacute;stroj&#367; z r&#367;zn&yacute;ch pracovn&iacute;ch ploch.
 </td>
 <td>triplus
 </td>
@@ -506,7 +505,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2308,13 +2306,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119223911
+Cached time: 20260119224007
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.387 seconds
-Real time usage: 0.856 seconds
-Preprocessor visited node count: 619/1000000
+CPU time usage: 0.367 seconds
+Real time usage: 0.565 seconds
+Preprocessor visited node count: 618/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2324,17 +2322,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.182      1 -total
- 38.69%    6.647      1 Template:Userdocnavi/cs
- 15.95%    2.740      2 Template:Docnav
- 14.33%    2.463      1 Template:Navigation_menu_2
- 12.13%    2.085      1 Template:Version
- 10.35%    1.778      1 Template:TOCright
-  9.90%    1.701      1 Template:KEY
-  8.07%    1.386      2 Template:FileName
+100.00%   19.580      1 -total
+ 55.10%   10.789      1 Template:Userdocnavi/cs
+ 23.62%    4.624      1 Template:Navigation_menu_2
+ 10.32%    2.020      2 Template:Docnav
+  8.78%    1.720      1 Template:Version
+  8.21%    1.607      2 Template:FileName
+  8.16%    1.598      1 Template:TOCright
+  5.80%    1.135      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119223910 and revision id 1741411. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224007 and revision id 1741413. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
