Created page with "|- | |[https://github.com/triplus/CubeMenu CubeMenu] |Přizpůsobení |CubeMenu umožňuje spravovat strukturu navigačního kubického menu FreeCADu a jeho celkový vzhled. |triplus |https://github.com/triplus/CubeMenu |[[File:AddonManager.svg|24px]] |[[File:Edit_Cancel.svg|24px]]"

--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -9,7 +9,7 @@
 <li><a href="../pt-br/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Bancadas de trabalho externas (1% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Ateliere Externe (1% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../fi/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="External workbenches (1% translated)" lang="fi" dir="ltr">suomi</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../ru/External_workbenches.html" class="mw-pt-progress mw-pt-progress--med" title="&#1042;&#1085;&#1077;&#1096;&#1085;&#1080;&#1077; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1080; (19% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="External workbenches/zh-cn (0% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="&#22806;&#37096;&#12527;&#12540;&#12463;&#12505;&#12531;&#12481; (1% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -505,16 +505,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/triplus/CubeMenu">CubeMenu</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>CubeMenu provides the ability to manage the FreeCAD navigation cube menu structure and overall appearance.
+<td>CubeMenu umo&#382;&#328;uje spravovat strukturu naviga&#269;n&iacute;ho kubick&eacute;ho menu FreeCADu a jeho celkov&yacute; vzhled.
 </td>
 <td>triplus
 </td>
@@ -523,7 +522,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2306,13 +2304,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119224007
+Cached time: 20260119224114
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.367 seconds
-Real time usage: 0.565 seconds
-Preprocessor visited node count: 618/1000000
+CPU time usage: 0.398 seconds
+Real time usage: 1.654 seconds
+Preprocessor visited node count: 617/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2322,17 +2320,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.580      1 -total
- 55.10%   10.789      1 Template:Userdocnavi/cs
- 23.62%    4.624      1 Template:Navigation_menu_2
- 10.32%    2.020      2 Template:Docnav
-  8.78%    1.720      1 Template:Version
-  8.21%    1.607      2 Template:FileName
-  8.16%    1.598      1 Template:TOCright
-  5.80%    1.135      1 Template:KEY
+100.00%  120.979      1 -total
+ 51.02%   61.728      1 Template:Userdocnavi/cs
+ 22.25%   26.923      1 Template:Navigation_menu_2
+ 16.31%   19.733      2 Template:Docnav
+ 11.58%   14.010      2 Template:FileName
+  8.49%   10.275      1 Template:TOCright
+  5.43%    6.575      1 Template:Version
+  4.34%    5.252      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224007 and revision id 1741413. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224113 and revision id 1741415. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
