--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -539,16 +539,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/triplus/IconThemes">IconThemes</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is an extension that provides the ability of changing the icons of the default program. Icon sets aren't provided with this extension; these need to be provided separately.
+<td>Jedn&aacute; se o roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; umo&#382;&#328;uje m&#283;nit ikony v&yacute;choz&iacute;ho programu. Sady ikon nejsou sou&#269;&aacute;st&iacute; tohoto roz&scaron;&iacute;&#345;en&iacute;, je nutn&eacute; je zakoupit samostatn&#283;.
 </td>
 <td>triplus
 </td>
@@ -557,7 +556,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2302,13 +2300,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119224210
+Cached time: 20260119224343
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.396 seconds
-Real time usage: 0.965 seconds
-Preprocessor visited node count: 616/1000000
+CPU time usage: 0.404 seconds
+Real time usage: 0.914 seconds
+Preprocessor visited node count: 615/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2318,17 +2316,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.947      1 -total
- 32.24%    4.496      1 Template:Userdocnavi/cs
- 23.70%    3.305      2 Template:Docnav
- 15.87%    2.214      1 Template:Navigation_menu_2
- 13.16%    1.835      1 Template:TOCright
-  9.70%    1.353      1 Template:Version
-  8.12%    1.132      2 Template:FileName
-  7.87%    1.097      1 Template:KEY
+100.00%   46.096      1 -total
+ 36.53%   16.840      1 Template:Userdocnavi/cs
+ 17.79%    8.202      1 Template:Navigation_menu_2
+ 14.00%    6.454      1 Template:TOCright
+ 13.53%    6.238      1 Template:Version
+ 11.78%    5.432      1 Template:KEY
+ 11.33%    5.221      2 Template:Docnav
+  9.36%    4.315      2 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224209 and revision id 1741417. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224342 and revision id 1741419. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
