--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -556,16 +556,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/triplus/Launcher">Launcher</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is a small extension that provides a dedicated dialog box to search and launch commands. Instead of clicking on a toolbar button or menu entry, this method of executing commands may be faster for some users.
+<td>Jedn&aacute; se o mal&eacute; roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; poskytuje speci&aacute;ln&iacute; dialogov&eacute; okno pro vyhled&aacute;v&aacute;n&iacute; a spou&scaron;t&#283;n&iacute; p&#345;&iacute;kaz&#367;. Nam&iacute;sto klik&aacute;n&iacute; na tla&#269;&iacute;tko na panelu n&aacute;stroj&#367; nebo polo&#382;ku v menu m&#367;&#382;e b&yacute;t tato metoda prov&aacute;d&#283;n&iacute; p&#345;&iacute;kaz&#367; pro n&#283;kter&eacute; u&#382;ivatele rychlej&scaron;&iacute;.
 </td>
 <td>triplus
 </td>
@@ -574,7 +573,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2300,13 +2298,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119224343
+Cached time: 20260119224431
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.404 seconds
-Real time usage: 0.914 seconds
-Preprocessor visited node count: 615/1000000
+CPU time usage: 0.360 seconds
+Real time usage: 0.552 seconds
+Preprocessor visited node count: 614/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2316,17 +2314,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.096      1 -total
- 36.53%   16.840      1 Template:Userdocnavi/cs
- 17.79%    8.202      1 Template:Navigation_menu_2
- 14.00%    6.454      1 Template:TOCright
- 13.53%    6.238      1 Template:Version
- 11.78%    5.432      1 Template:KEY
- 11.33%    5.221      2 Template:Docnav
-  9.36%    4.315      2 Template:FileName
+100.00%   13.223      1 -total
+ 40.38%    5.339      1 Template:Userdocnavi/cs
+ 19.61%    2.593      2 Template:Docnav
+ 18.32%    2.422      1 Template:Navigation_menu_2
+ 10.07%    1.332      1 Template:TOCright
+  8.70%    1.151      2 Template:FileName
+  8.22%    1.087      1 Template:Version
+  8.19%    1.083      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224342 and revision id 1741419. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224430 and revision id 1741421. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
