--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -573,16 +573,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=ModernUI_workbench_icon.svg&amp;filetimestamp=20210101155150&amp;.html" class="mw-file-description"><img src="../File/ModernUI_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a href="../ModernUI_Workbench.html" title="ModernUI Workbench">ModernUI</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>Replaces the standard user interface (UI) with feature such as ribbon menus and collapsing/expanding panels on mouse-over.
+<td>Nahrazuje standardn&iacute; u&#382;ivatelsk&eacute; rozhran&iacute; (UI) funkcemi, jako jsou p&aacute;sov&eacute; nab&iacute;dky a sbaliteln&eacute;/rozbaliteln&eacute; panely p&#345;i najet&iacute; my&scaron;&iacute;.
 </td>
 <td>HakanSeven12
 </td>
@@ -591,7 +590,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2298,13 +2296,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119224431
+Cached time: 20260119224507
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.360 seconds
-Real time usage: 0.552 seconds
-Preprocessor visited node count: 614/1000000
+CPU time usage: 0.347 seconds
+Real time usage: 0.492 seconds
+Preprocessor visited node count: 613/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2314,17 +2312,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.223      1 -total
- 40.38%    5.339      1 Template:Userdocnavi/cs
- 19.61%    2.593      2 Template:Docnav
- 18.32%    2.422      1 Template:Navigation_menu_2
- 10.07%    1.332      1 Template:TOCright
-  8.70%    1.151      2 Template:FileName
-  8.22%    1.087      1 Template:Version
-  8.19%    1.083      1 Template:KEY
+100.00%   11.368      1 -total
+ 42.31%    4.810      1 Template:Userdocnavi/cs
+ 20.44%    2.324      1 Template:Navigation_menu_2
+ 18.01%    2.047      2 Template:Docnav
+  8.92%    1.014      2 Template:FileName
+  8.76%    0.996      1 Template:TOCright
+  8.64%    0.982      1 Template:KEY
+  8.58%    0.975      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224430 and revision id 1741421. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224506 and revision id 1741423. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
