Created page with "|- | |[https://github.com/triplus/NavigationIndicator NavigationIndicator] |Přizpůsobení |Jedná se o rozšíření, které přidává indikátor pro [[Mouse_navigation|navigaci myší]] do stavového řádku. Od verze FreeCAD 0.17 je toto rozšíření zastaralé, protože indikátor je nativně součástí FreeCADu. |triplus |https://github.com/triplus/NavigationIndicator |[[File:AddonManager.svg|24px]] |[[File:Edit_Cancel.svg|24px]]"

--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -590,16 +590,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/triplus/NavigationIndicator">NavigationIndicator</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is an extension that adds an indicator for the <a href="../Mouse_navigation.html" title="Mouse navigation">mouse navigation style</a> in the status bar. Since FreeCAD 0.17 this extension is obsolete, as the indicator is included natively in FreeCAD.
+<td>Jedn&aacute; se o roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; p&#345;id&aacute;v&aacute; indik&aacute;tor pro <a href="../Mouse_navigation.html" title="Mouse navigation">navigaci my&scaron;&iacute;</a> do stavov&eacute;ho &#345;&aacute;dku. Od verze FreeCAD 0.17 je toto roz&scaron;&iacute;&#345;en&iacute; zastaral&eacute;, proto&#382;e indik&aacute;tor je nativn&#283; sou&#269;&aacute;st&iacute; FreeCADu.
 </td>
 <td>triplus
 </td>
@@ -608,7 +607,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2296,13 +2294,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119224507
+Cached time: 20260119224548
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.347 seconds
-Real time usage: 0.492 seconds
-Preprocessor visited node count: 613/1000000
+CPU time usage: 0.386 seconds
+Real time usage: 1.741 seconds
+Preprocessor visited node count: 612/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2312,17 +2310,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.368      1 -total
- 42.31%    4.810      1 Template:Userdocnavi/cs
- 20.44%    2.324      1 Template:Navigation_menu_2
- 18.01%    2.047      2 Template:Docnav
-  8.92%    1.014      2 Template:FileName
-  8.76%    0.996      1 Template:TOCright
-  8.64%    0.982      1 Template:KEY
-  8.58%    0.975      1 Template:Version
+100.00%   23.196      1 -total
+ 51.72%   11.998      1 Template:Userdocnavi/cs
+ 21.13%    4.902      1 Template:Navigation_menu_2
+ 16.44%    3.814      2 Template:Docnav
+ 12.30%    2.852      1 Template:TOCright
+  6.45%    1.495      1 Template:KEY
+  5.63%    1.307      2 Template:FileName
+  4.92%    1.142      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224506 and revision id 1741423. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224546 and revision id 1741425. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
