--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -607,16 +607,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/triplus/PersistentToolbars">PersistentToolbars</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is a small extension to keep the toolbars in their locations. Since FreeCAD 0.17 this extension is obsolete, as the functionality is included natively in FreeCAD.
+<td>Jedn&aacute; se o mal&eacute; roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; udr&#382;uje panely n&aacute;stroj&#367; na sv&yacute;ch m&iacute;stech. Od verze FreeCADu 0.17 je toto roz&scaron;&iacute;&#345;en&iacute; zastaral&eacute;, proto&#382;e jeho funkce je nativn&#283; ve FreeCADu zahrnuta.
 </td>
 <td>triplus
 </td>
@@ -625,7 +624,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2294,13 +2292,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119224548
+Cached time: 20260119224658
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.386 seconds
-Real time usage: 1.741 seconds
-Preprocessor visited node count: 612/1000000
+CPU time usage: 0.366 seconds
+Real time usage: 0.540 seconds
+Preprocessor visited node count: 611/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2310,17 +2308,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.196      1 -total
- 51.72%   11.998      1 Template:Userdocnavi/cs
- 21.13%    4.902      1 Template:Navigation_menu_2
- 16.44%    3.814      2 Template:Docnav
- 12.30%    2.852      1 Template:TOCright
-  6.45%    1.495      1 Template:KEY
-  5.63%    1.307      2 Template:FileName
-  4.92%    1.142      1 Template:Version
+100.00%   19.077      1 -total
+ 40.19%    7.667      1 Template:Userdocnavi/cs
+ 15.12%    2.885      2 Template:Docnav
+ 13.83%    2.639      1 Template:KEY
+ 13.82%    2.637      2 Template:FileName
+ 12.18%    2.324      1 Template:Navigation_menu_2
+  7.41%    1.414      1 Template:TOCright
+  5.86%    1.118      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224546 and revision id 1741425. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224657 and revision id 1741427. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
