Created page with "|- |[[File:PieMenuWorkbench.svg|32px]] |[[PieMenu_Workbench|PieMenu Workbench]] |Přizpůsobení |Jedná se o malé rozšíření, které po stisknutí klávesy {{KEY|Tab}} nebo klávesové zkratky nastavené uživatelem zobrazí kruhové menu pro výběr nástrojů nebo příkazů. Kruhové menu je rozhraní, které se objevuje v programu Blender a dalších systémech, jako jsou mobilní telefony s operačním systémem Android, a slouží ke spouštění příkazů. |..."

--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -624,16 +624,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=PieMenuWorkbench.svg&amp;filetimestamp=20240201182735&amp;.html" class="mw-file-description"><img src="../File/PieMenuWorkbench.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span>
 </td>
 <td><a href="../PieMenu_Workbench.html" title="PieMenu Workbench">PieMenu Workbench</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is a small extension that shows a pie menu to select tools or commands when the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Tab</span> key or a key sequence established by the user is pressed. A pie menu is an interface that appears in Blender and other systems like Android mobile phones to launch commands.
+<td>Jedn&aacute; se o mal&eacute; roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; po stisknut&iacute; kl&aacute;vesy <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Tab</span> nebo kl&aacute;vesov&eacute; zkratky nastaven&eacute; u&#382;ivatelem zobraz&iacute; kruhov&eacute; menu pro v&yacute;b&#283;r n&aacute;stroj&#367; nebo p&#345;&iacute;kaz&#367;. Kruhov&eacute; menu je rozhran&iacute;, kter&eacute; se objevuje v programu Blender a dal&scaron;&iacute;ch syst&eacute;mech, jako jsou mobiln&iacute; telefony s opera&#269;n&iacute;m syst&eacute;mem Android, a slou&#382;&iacute; ke spou&scaron;t&#283;n&iacute; p&#345;&iacute;kaz&#367;.
 </td>
 <td>Grubuntu
 </td>
@@ -642,7 +641,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2292,13 +2290,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119224658
+Cached time: 20260119224750
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.366 seconds
-Real time usage: 0.540 seconds
-Preprocessor visited node count: 611/1000000
+CPU time usage: 0.410 seconds
+Real time usage: 0.690 seconds
+Preprocessor visited node count: 610/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2308,17 +2306,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.077      1 -total
- 40.19%    7.667      1 Template:Userdocnavi/cs
- 15.12%    2.885      2 Template:Docnav
- 13.83%    2.639      1 Template:KEY
- 13.82%    2.637      2 Template:FileName
- 12.18%    2.324      1 Template:Navigation_menu_2
-  7.41%    1.414      1 Template:TOCright
-  5.86%    1.118      1 Template:Version
+100.00%   28.557      1 -total
+ 38.51%   10.997      1 Template:Userdocnavi/cs
+ 17.45%    4.982      2 Template:FileName
+ 14.38%    4.106      1 Template:Navigation_menu_2
+ 14.06%    4.014      1 Template:TOCright
+ 12.81%    3.659      2 Template:Docnav
+  8.52%    2.433      1 Template:Version
+  5.48%    1.566      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224657 and revision id 1741427. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224749 and revision id 1741429. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
