--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -641,16 +641,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/microelly2/freecad-pluginloader">Pluginloader</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>It is a small extension that allows the user to install macros, external workbenches, and other extensions in FreeCAD. Since FreeCAD 0.17 this utility is obsolete, as this functionality is already provided by the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>.
+<td>Jedn&aacute; se o mal&eacute; roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; u&#382;ivateli umo&#382;&#328;uje instalovat makra, extern&iacute; pracovn&iacute; plochy a dal&scaron;&iacute; roz&scaron;&iacute;&#345;en&iacute; do FreeCADu. Od verze FreeCAD 0.17 je tento n&aacute;stroj zastaral&yacute;, proto&#382;e tuto funkci ji&#382; poskytuje <a href="../Std_AddonMgr.html" title="Std AddonMgr">Spr&aacute;vce dopl&#328;k&#367;</a>.
 </td>
 <td>microelly2
 </td>
@@ -659,7 +658,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2290,13 +2288,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119224750
+Cached time: 20260119224953
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.410 seconds
-Real time usage: 0.690 seconds
-Preprocessor visited node count: 610/1000000
+CPU time usage: 0.404 seconds
+Real time usage: 0.634 seconds
+Preprocessor visited node count: 609/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2306,17 +2304,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.557      1 -total
- 38.51%   10.997      1 Template:Userdocnavi/cs
- 17.45%    4.982      2 Template:FileName
- 14.38%    4.106      1 Template:Navigation_menu_2
- 14.06%    4.014      1 Template:TOCright
- 12.81%    3.659      2 Template:Docnav
-  8.52%    2.433      1 Template:Version
-  5.48%    1.566      1 Template:KEY
+100.00%   34.353      1 -total
+ 34.84%   11.967      1 Template:Userdocnavi/cs
+ 17.92%    6.157      2 Template:Docnav
+ 13.23%    4.544      1 Template:Version
+ 12.92%    4.437      1 Template:Navigation_menu_2
+ 10.83%    3.720      2 Template:FileName
+ 10.62%    3.648      1 Template:KEY
+  9.36%    3.215      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224749 and revision id 1741429. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119224952 and revision id 1741431. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
