--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -675,16 +675,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a rel="nofollow" class="external text" href="https://github.com/APEbbers/FreeCAD-Ribbon">Ribbon</a>
 </td>
-<td>Customization
+<td>P&#345;izp&#367;soben&iacute;
 </td>
-<td>A customizable ribbon UI for FreeCAD.
+<td>P&#345;izp&#367;sobiteln&eacute; u&#382;ivatelsk&eacute; rozhran&iacute; p&aacute;su karet pro FreeCAD.
 </td>
 <td>APEbbers
 </td>
@@ -693,7 +692,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2286,13 +2284,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119225033
+Cached time: 20260119225105
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.340 seconds
-Real time usage: 0.488 seconds
-Preprocessor visited node count: 608/1000000
+CPU time usage: 0.387 seconds
+Real time usage: 0.525 seconds
+Preprocessor visited node count: 607/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2302,17 +2300,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.287      1 -total
- 40.45%    5.779      1 Template:Userdocnavi/cs
- 16.93%    2.418      2 Template:Docnav
- 16.46%    2.351      1 Template:Navigation_menu_2
- 10.83%    1.548      2 Template:FileName
- 10.59%    1.513      1 Template:TOCright
-  9.00%    1.286      1 Template:Version
-  7.94%    1.134      1 Template:KEY
+100.00%   16.895      1 -total
+ 32.54%    5.497      1 Template:Userdocnavi/cs
+ 15.18%    2.564      2 Template:Docnav
+ 15.12%    2.554      1 Template:Version
+ 14.81%    2.502      1 Template:Navigation_menu_2
+ 11.41%    1.928      1 Template:TOCright
+ 10.18%    1.720      1 Template:KEY
+  9.74%    1.646      2 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225032 and revision id 1741433. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225105 and revision id 1741435. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
