Created page with "|- |[[File:MOOC_workbench_icon.svg|32px]] |[[MOOC_Workbench|MOOC]] |Vzdělávání |Poskytuje interaktivní výukový program, ve kterém se můžete naučit pracovat s FreeCADem přímo v programu. Umožňuje vám vyhodnotit vaše samostudium. |rockn |https://framagit.org/freecad-france/mooc-workbench |[[File:AddonManager.svg|24px]] |"

--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -811,16 +811,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=MOOC_workbench_icon.svg&amp;filetimestamp=20200209050031&amp;.html" class="mw-file-description"><img src="../File/MOOC_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td><a href="../MOOC_Workbench.html" title="MOOC Workbench">MOOC</a>
 </td>
-<td>Education
+<td>Vzd&#283;l&aacute;v&aacute;n&iacute;
 </td>
-<td>It provides an interactive tutorial to learn about FreeCAD directly inside the program. It allows you to evaluate your self-learning.
+<td>Poskytuje interaktivn&iacute; v&yacute;ukov&yacute; program, ve kter&eacute;m se m&#367;&#382;ete nau&#269;it pracovat s FreeCADem p&#345;&iacute;mo v programu. Umo&#382;&#328;uje v&aacute;m vyhodnotit va&scaron;e samostudium.
 </td>
 <td>rockn
 </td>
@@ -829,7 +828,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2270,13 +2268,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119225550
+Cached time: 20260119225634
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.331 seconds
-Real time usage: 0.511 seconds
-Preprocessor visited node count: 600/1000000
+CPU time usage: 0.407 seconds
+Real time usage: 0.617 seconds
+Preprocessor visited node count: 599/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2286,17 +2284,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.181      1 -total
- 41.36%    9.174      1 Template:Userdocnavi/cs
- 15.21%    3.373      1 Template:Version
- 15.08%    3.346      1 Template:Navigation_menu_2
- 11.38%    2.524      1 Template:KEY
- 10.73%    2.381      2 Template:Docnav
-  8.26%    1.833      2 Template:FileName
-  7.89%    1.750      1 Template:TOCright
+100.00%   17.772      1 -total
+ 45.67%    8.117      1 Template:Userdocnavi/cs
+ 22.40%    3.981      1 Template:Navigation_menu_2
+ 12.64%    2.246      2 Template:Docnav
+ 11.68%    2.076      1 Template:KEY
+ 10.15%    1.804      1 Template:Version
+  8.14%    1.447      2 Template:FileName
+  7.43%    1.320      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225549 and revision id 1741449. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119225634 and revision id 1741451. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
