Created page with "|- | |[[Parts_Library_Workbench|Parts Library]] |Součásti |Jedná se o rozšíření, které stahuje knihovnu dílů ve formátu STEP {{FileName|.step}} nebo ve formátu FreeCAD {{FileName|.FCStd}}, které lze importovat do dokumentu. Uživatelé mohou přispívat do této knihovny obsahem tím, že rozvětví repozitář, přidají své vlastní díly pod liberální licencí CC-BY 3.0 a odešlou žádost o sloučení nových objektů. |Community |https://github.com/F..."

--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -1479,16 +1479,15 @@
 </td>
 <td>
 
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a href="../Parts_Library_Workbench.html" title="Parts Library Workbench">Parts Library</a>
 </td>
-<td>Parts
+<td>Sou&#269;&aacute;sti
 </td>
-<td>It is an extension that downloads a library of parts in STEP format <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.step</span> or in FreeCAD format <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.FCStd</span> that can be imported into a document. Users can contribute content to this library by forking the repository, adding their own parts under a permissive CC-BY 3.0 license, and submitting a pull request to merge the new objects.
+<td>Jedn&aacute; se o roz&scaron;&iacute;&#345;en&iacute;, kter&eacute; stahuje knihovnu d&iacute;l&#367; ve form&aacute;tu STEP <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.step</span> nebo ve form&aacute;tu FreeCAD <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.FCStd</span>, kter&eacute; lze importovat do dokumentu. U&#382;ivatel&eacute; mohou p&#345;isp&iacute;vat do t&eacute;to knihovny obsahem t&iacute;m, &#382;e rozv&#283;tv&iacute; repozit&aacute;&#345;, p&#345;idaj&iacute; sv&eacute; vlastn&iacute; d&iacute;ly pod liber&aacute;ln&iacute; licenc&iacute; CC-BY 3.0 a ode&scaron;lou &#382;&aacute;dost o slou&#269;en&iacute; nov&yacute;ch objekt&#367;.
 </td>
 <td>Community
 </td>
@@ -1497,7 +1496,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2254,13 +2252,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120021036
+Cached time: 20260120021213
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.438 seconds
-Real time usage: 0.712 seconds
-Preprocessor visited node count: 592/1000000
+CPU time usage: 0.381 seconds
+Real time usage: 0.650 seconds
+Preprocessor visited node count: 591/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2270,17 +2268,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.935      1 -total
- 41.29%    6.993      1 Template:Userdocnavi/cs
- 15.48%    2.622      1 Template:Navigation_menu_2
- 14.32%    2.426      2 Template:Docnav
- 11.27%    1.909      1 Template:Version
- 10.52%    1.781      2 Template:FileName
- 10.17%    1.723      1 Template:KEY
-  8.03%    1.360      1 Template:TOCright
+100.00%   28.600      1 -total
+ 34.20%    9.782      1 Template:Userdocnavi/cs
+ 26.96%    7.712      1 Template:Version
+ 14.79%    4.231      1 Template:Navigation_menu_2
+ 10.27%    2.937      2 Template:Docnav
+  9.42%    2.693      1 Template:TOCright
+  8.51%    2.435      1 Template:KEY
+  6.61%    1.891      2 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120021035 and revision id 1741467. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120021212 and revision id 1741469. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
