Created page with "|- | |[[PCB_Workbench|PCB]] |Součásti |Jedná se o pracovní plochu, která uživateli umožňuje importovat a vytvářet desky plošných spojů (PCB) v programu FreeCAD. Podporuje vrstvy, barvy, průhlednost, import modelů Step a Iges a zobrazení otvorů a průchodek. |marmni |https://github.com/marmni/FreeCAD-PCB |[[File:AddonManager.svg|24px]] |"

--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -1496,16 +1496,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td>
 </td>
 <td><a href="../PCB_Workbench.html" title="PCB Workbench">PCB</a>
 </td>
-<td>Parts
+<td>Sou&#269;&aacute;sti
 </td>
-<td>It is a workbench that allows the user to import and create printed circuit boards (PCB) in FreeCAD. It supports layers, colors, transparencies, importing Step and Iges models, and displaying holes and vias.
+<td>Jedn&aacute; se o pracovn&iacute; plochu, kter&aacute; u&#382;ivateli umo&#382;&#328;uje importovat a vytv&aacute;&#345;et desky plo&scaron;n&yacute;ch spoj&#367; (PCB) v programu FreeCAD. Podporuje vrstvy, barvy, pr&#367;hlednost, import model&#367; Step a Iges a zobrazen&iacute; otvor&#367; a pr&#367;chodek.
 </td>
 <td>marmni
 </td>
@@ -1514,7 +1513,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 <div lang="en" dir="ltr" class="mw-content-ltr">
 </div></td></tr>
 <tr>
@@ -2252,13 +2250,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120021213
+Cached time: 20260120021548
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.381 seconds
-Real time usage: 0.650 seconds
-Preprocessor visited node count: 591/1000000
+CPU time usage: 0.371 seconds
+Real time usage: 0.573 seconds
+Preprocessor visited node count: 590/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2268,17 +2266,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.600      1 -total
- 34.20%    9.782      1 Template:Userdocnavi/cs
- 26.96%    7.712      1 Template:Version
- 14.79%    4.231      1 Template:Navigation_menu_2
- 10.27%    2.937      2 Template:Docnav
-  9.42%    2.693      1 Template:TOCright
-  8.51%    2.435      1 Template:KEY
-  6.61%    1.891      2 Template:FileName
+100.00%   19.792      1 -total
+ 35.81%    7.087      1 Template:Userdocnavi/cs
+ 18.54%    3.670      1 Template:TOCright
+ 14.57%    2.883      2 Template:Docnav
+ 14.23%    2.817      1 Template:Navigation_menu_2
+ 11.77%    2.330      1 Template:Version
+  7.54%    1.492      1 Template:KEY
+  6.54%    1.295      2 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120021212 and revision id 1741469. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260120021547 and revision id 1741471. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
